// Copyright 2019-2022:
//   GobySoft, LLC (2013-)
//   Community contributors (see AUTHORS file)
// File authors:
//   Toby Schneider <toby@gobysoft.org>
//
//
// This file is part of the Dynamic Compact Control Language Library
// ("DCCL").
//
// DCCL is free software: you can redistribute it and/or modify
// it under the terms of the GNU Lesser General Public License as published by
// the Free Software Foundation, either version 2.1 of the License, or
// (at your option) any later version.
//
// DCCL is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with DCCL.  If not, see <http://www.gnu.org/licenses/>.
syntax = "proto2";
import "dccl/option_extensions.proto";

package dccl.test;

message TestMsg
{
    option (dccl.msg).id = 2;
    option (dccl.msg).max_bytes = 64;
    option (dccl.msg).codec_version = 4;

    // test default enc/dec
    required double d = 1 [
        (dccl.field).min = -100,
        (dccl.field).max = 126,
        (dccl.field).precision = 2,
        (dccl.field).in_head = true
    ];
    optional int32 i = 3 [(dccl.field).min = -20, (dccl.field).max = 3000];
    optional string s2 = 13
        [(dccl.field).max_length = 8, (dccl.field).codec = "dccl.default2"];
    optional string s = 14 [(dccl.field).max_length = 8];
    optional bytes b = 15 [(dccl.field).max_length = 9];
    optional bytes vb = 16
        [(dccl.field).max_length = 9, (dccl.field).codec = "dccl.var_bytes"];

    repeated int32 ri = 17 [
        (dccl.field).min = -20,
        (dccl.field).max = 3000,
        (dccl.field).max_repeat = 3
    ];
}
